# drillTrack

./: README-Android.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cursor/rules/: rust-async-development-rules.mdc
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  database.db  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/keys/: README.md  private_key.der  public_key.der
src-tauri/src/: lib.rs  license_utils.rs  main.rs
src-tauri/src/commands/: db.rs  license.rs  mod.rs  network.rs
src-tauri/src/models/: data.rs  excel.rs  mod.rs  repo.rs  user.rs
src-tauri/src/services/: db.rs  mod.rs  router.rs
src-tauri/src/utils/: license.rs  utils.rs
src/assets/: geography.json
src/components/: ControlPanel.tsx  DrillDataTable.tsx  app-header.tsx  app-sidebar.tsx  chart-2d.tsx  chart-3d.three.tsx  chart-3d.tsx  chart-geo-3d.tsx  chart-geo.tsx  control-panel.tsx  data-display.tsx  data-table.tsx  magnetic-declination-dialog.tsx
src/context/: drilling-data-context.tsx
src/lib/: calculations.ts  db.ts
src/pages/: Activation.tsx  NetworkPage.tsx
