[package]
name = "drilltrack"
version = "1.0.0"
description = "钻孔轨迹仪数据处理系统"
authors = ["mr.y"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.16.20"
data-encoding = "2.3.3"
sysinfo = "0.29.0"
sha2 = "0.10.6"
chrono = "0.4.40"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
# 网络相关依赖
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
local-ip-address = "0.5.1"
# SQLite相关依赖
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio-rusqlite = "0.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
once_cell = "1.18.0"
rust_xlsxwriter = "0.40.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
